Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -43,12 +43,12 @@
          var pw = document.getElementById("pwtext").value;
 
          if( user == "102" && pw == 960312){
-            document.getElementById("stat").innerHTML = 'Welcome home. Won-Young' + "<br>" + "<a href='hall.html'>>>>UNLOCKED<<<</a>";
+            document.getElementById("stat").innerHTML = 'Welcome home. Won-Young' + "<br>" + "<a href='Hall.html'>>>>UNLOCKED<<<</a>";
             document.body.style.backgroundImage = "url('images/unlock.gif')";
             document.body.style.backgroundPosition = "center";
          }
          else if( user == "INI" && pw == 950831){
-            document.getElementById("stat").innerHTML = 'Welcome home. Hea-In' + "<br>" +"<a href='hall.html'>>>>UNLOCKED<<<</a>";
+            document.getElementById("stat").innerHTML = 'Welcome home. Hea-In' + "<br>" +"<a href='Hall.html'>>>>UNLOCKED<<<</a>";
             document.body.style.backgroundImage = "url('images/unlock.gif')";
             document.body.style.backgroundPosition = "center";
          }
