--- a/Hall.html
+++ b/Hall.html
@@ -51,7 +51,7 @@
 								<li><a href="count-down.html">Date Count Down</a></li>
 								<li><a href="Dots.html">Dots</a></li>
 								<li><a href="#">Contact</a></li>
-								<li><a href="index.html">Log Out</a></li>
+								<li><a href="Index.html">Log Out</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
